--- a/public/webrtc.html
+++ b/public/webrtc.html
@@ -1,47 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Very simple WebRTC application with a Node.js signaling server</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <title>Video Chat base on WebRTC</title>
+    <style type="text/css">
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        #div-video {
+            width: 100%;
+            height: 500px;
+            margin: 10px auto;
+        }
+        #div-video > video {
+            width: 600px;
+            height: 480px;
+            border: 1px dashed;
+        }
+    </style>
 </head>
 <body>
-    <div id='mainDiv'>
-        <table border="1" width="100%">
-            <tr>
-                <th>
-                    Local video
-                </th>
-                <th>
-                    Remote video
-                </th>
-            </tr>
-            <tr>
-                <td>
-                    <video id="localVideo" autoplay></video>
-                </td>
-                <td>
-                    <video id="remoteVideo" autoplay></video>
-                </td>
-            </tr>
-            <tr>
-                <td align="center">
-                    <textarea rows="4" cols="60" id="dataChannelSend" disabled placeholder="This will be enabled once the data channel is up...">
-                    </textarea>
-                </td>
-                <td align="center">
-                    <textarea rows="4" cols="60" id="dataChannelReceive" disabled>
-                    </textarea>
-                </td>
-            </tr>
-            <tr>
-                <td align="center">
-                    <button id="sendButton" disabled>Send</button>
-                </td>
-                <td></td>
-            </tr>
-        </table>
+    <div id="div-video">
+        <video id="localVideo"></video>
+        <video id="remoteVideo"></video>
+    </div>
+    <div id="div-users">
+        <label>hello</label>
     </div>
     <script src='/socket.io/socket.io.js'></script>
-    <script src='js/adapter.js'></script>
     <script src='js/webrtc.js'></script>
 </body>
 
