--- a/public/webrtc.html
+++ b/public/webrtc.html
@@ -1,35 +1,66 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <title>Video Chat base on WebRTC</title>
     <style type="text/css">
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        #div-video {
-            width: 100%;
-            height: 500px;
-            margin: 10px auto;
-        }
-        #div-video > video {
-            width: 600px;
-            height: 480px;
-            border: 1px dashed;
-        }
+    * {
+        margin: 0;
+        padding: 0;
+    }
+    #div-video {
+        width: 100%;
+        height: 100%;
+        margin-left: 200px;
+    }
+    #div-video > video {
+        width: 480px;
+        height: 480px;
+        border: 1px dashed;
+        margin: 20px;
+    }
+    #div-side {
+        width: 200px;
+        height: 100%;
+        position: absolute;
+        overflow: auto;
+        border-right: 1px dashed;
+        text-align: center;
+    }
+    #div-side-header {
+        padding: 20px;
+        border-bottom: 1px dashed;
+        vertical-align: middle;
+    }
+    #div-users > label {
+        height: 40px;
+        line-height: 40px;
+        display: block;
+    }
+    #div-users > label:hover {
+        background: #f3f3f3;
+    }
     </style>
 </head>
+
 <body>
+    <div id="div-side">
+        <div id="div-side-header">
+            <h2>
+                Online Users
+            </h2>
+            <small>Click to send video chat request</small>
+        </div>
+        <div id="div-users">
+        </div>
+    </div>
     <div id="div-video">
         <video id="localVideo"></video>
         <video id="remoteVideo"></video>
     </div>
-    <div id="div-users">
-        <label>hello</label>
-    </div>
+
     <script src='/socket.io/socket.io.js'></script>
     <script src='js/webrtc.js'></script>
 </body>
